force-app/main/default/objects/PotencialCompra__c/PotencialCompra__c.object-meta.xml
<CustomObject>
    <label>Potencial de Compra</label>
    <nameField>
        <label>Potencial de Compra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potencial de Compras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>