force-app/main/default/objects/PotencialCompra__c/fields/ArableArea__c.field-meta.xml
<CustomField>
    <fullName>ArableArea__c</fullName>
    <label>Área Agricultável</label>
    <length>180</length>
    <type>Text</type>
</CustomField>