force-app/main/default/objects/PotencialCompra__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Potencial de Compras</relationshipLabel>
    <relationshipName>Potencial_de_Compras</relationshipName>
    <type>Lookup</type>
</CustomField>