force-app/main/default/objects/PotencialCompra__c/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cultura</label>
    <referenceTo>Cultura__c</referenceTo>
    <relationshipLabel>Potencial de Compras</relationshipLabel>
    <relationshipName>Potencial_de_Compras</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>