force-app/main/default/objects/PotencialCompra__c/fields/harvest__c.field-meta.xml
<CustomField>
    <fullName>harvest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Safra__c</referenceTo>
    <relationshipLabel>Potencial de Compras</relationshipLabel>
    <relationshipName>Potencial_de_Compras</relationshipName>
    <type>Lookup</type>
</CustomField>