force-app/main/default/objects/PotencialCompra__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Chave</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>