force-app/main/default/objects/PotencialCompra__c/fields/PotentialPurchaseValue__c.field-meta.xml
<CustomField>
    <fullName>PotentialPurchaseValue__c</fullName>
    <label>Potencial de Compra em Valor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>