force-app/main/default/objects/PotencialCompra__c/fields/ProductsGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductsGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grupo de Produtos</label>
    <referenceTo>ProductGroup__c</referenceTo>
    <relationshipLabel>Potencial de Compras</relationshipLabel>
    <relationshipName>Potencial_de_Compras</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>