force-app/main/default/objects/PotencialCompra__c/fields/SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organização de Venda</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Potencial de Compras</relationshipLabel>
    <relationshipName>Potencial_de_Compras</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>